2005-05-24 Scott Dattalo <scott@dattalo.com>
	* src/modules.h, src/modules.cc, src/processor.cc,
	src/breakpoints.cc, src/pic-processor.cc, src/hexutils.cc,
	gui/gui_src.cc, gui/gui_src_asm.cc, cli/scan.ll,
	src/cmd_manager.h, cli/cmd_dump.cc:
	
	-- renamed the enum's for the SIMULATION_MODE(s) (the
	enum 'INITIAL' collides with a macro in flex)
	-- added support for module scripts
	-- If a symbol begins with a period, then the scanner
	will automatically prepend the active processor name.
	(This is a short cut for accessing processor attributes).

2005-05-24 Borut Razem <borut.razem@siol.net>
	* doc/gpsimWin32.html, gpsim/gpsim.vcproj, gpsim/makefile.mingw:
	WIN32 with official release of gtk+extra-2.0.0

2005-05-22 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_break.cc, cli/cmd_break.h, cli/parse.yy, cli/scan.ll,
	src/breakpoints.cc, src/breakpoints.h, src/operator.cc,
	src/trigger.cc, src/trigger.h, src/value.cc:
	Added the capability of associating user defined messages with
	break points.
	Break point expressions (if present) are now displayed when the
	break points are displayed.
	* regression/assertions/Makefile,
	regression/assertions/assertions.asm: Use the coff.inc include
	file supplied with gputils and specifically the macros for
	assertions. 

2005-05-21 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_break.h, cli/cmd_break.cc, cli/input.cc, cli/parse.yy,
	src/cod.cc, src/breakpoints.cc: Execution breakpoints were failing
	to propogate execute() if an attached expression evaluated false.
	Added support for gpasm style assertions.
	* cli/scan.ll: Shell command escape character ('!') was
	conflicting with the not operator.
	* regression/assertions/assertions.asm,
	regression/assertions/Makefile, regression/assertions/16f873.lkr:
	Added a regression test for gpasm assertions.

2005-05-20 Scott Dattalo <scott@dattalo.com>
	* cli/scan.ll, regression/run_regression.sh,
	regression/macro_test/macro_test.stc:  Macros can now be nested.
